# Argon

./: .gitignore  CMakeLists.txt  LICENSE  initial.xyz  main.cpp  trajectory.xyz
public/: timelapse.xyz
src/: atom.cpp  atom.hpp  config.hpp  inc.hpp  simulation.cpp  simulation.hpp  space.cpp  space.hpp  state.cpp  state.hpp
